change div tags to article tags + change make event cards more responsive + centred intro text in mobile

--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
     <main class="parent_main">
         <section class="about_header">
           <div class="welcome-text col-12 pt-5 mt-5">
-            <h3 class="text-left text-md-center hello_intro orange">"Hello Devs!"</h3>
-            <h1 class="text-uppercase text-left text-md-center font-weight-bold text-img-effect">GAME DEVELOPERS GLOBAL SUMMIT 2020</h1>
+            <h3 class="text-left text-center hello_intro orange">"Hello Devs!"</h3>
+            <h1 class="text-uppercase text-center text-md-center font-weight-bold text-img-effect">GAME DEVELOPERS GLOBAL SUMMIT 2020</h1>
           </div>
           <div class="about_desc col-12 mt-4 mb-4">
             <p class="bg-white text-center p-4">
