--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
        <section class="container-fluid jumbotron slider intro_header pr-5">
           <div class="row">
            <div class="intro col-sm-12 mt-5">
-            <h3 class = "hello_intro orange">"Hello Devs!"</h3>
-            <h1 class="text-img-effect font-weight-bold font-style-medium orange">GAME DEVELOPERS</h1>
-            <h1 class="text-img-effect font-weight-bold orange">GLOBAL SUMMIT</h1>
-            <h1 class="text-img-effect font-weight-bold orange">2020</h1>
+            <h3 class = "hello_intro orange text-md-left text-center">"Hello Devs!"</h3>
+            <h1 class="text-img-effect font-weight-bold font-style-medium orange text-md-left text-center">GAME DEVELOPERS</h1>
+            <h1 class="text-img-effect font-weight-bold orange text-md-left text-center">GLOBAL SUMMIT</h1>
+            <h1 class="text-img-effect font-weight-bold orange text-md-left text-center">2020</h1>
             <p class="p-4 intro_description text-dark">
               With a surge of new gamers and an increase in time spent playing games in the last year,
               it’s more important than ever to delight and engage players.
@@ -41,7 +41,7 @@
         </div>
         <ul class="row program d-flex flex-row justify-content-center">
           <li class="col-12 col-md-2 pr-4 pl-0 mr-1">
-            <div class="program-block text-center row mb-5 p-4 bg-dark-light-custom">
+            <article class="program-block text-center row mb-5 p-4 bg-dark-light-custom">
               <div class="col-sm-2 col-12 col-md-12 pr-0 pl-0">
                <img src="assets/images/lecture.png" alt="lecture"/>
               </div>
@@ -49,48 +49,61 @@
                 Lecture
               </h5>
               <p class="custom_p_tag col-sm-5 col-12 col-md-12 pb-4 pr-0 pl-0 text-white">
-                Delivering seamless multiplayer experiences globally with Game Servers — with live Q&A
+                Connecting with gaming creators
               </p>
-            </div>
+            </article>
           </li>
           <li class="col-12 col-md-2 pr-4 pl-0 mr-1">
-            <div class="program-block text-center row mb-5 p-4 bg-dark-light-custom">
+            <article class="program-block text-center row mb-5 p-4 bg-dark-light-custom">
               <div class="col-sm-2 col-12 col-md-12 pr-0 pl-0">
-                <img src="assets/images/CC.png" alt="cc"/>
+               <img src="assets/images/CC.png" alt="lecture"/>
               </div>
               <h5 class="col-sm-5 col-12 col-md-12 pr-0 pl-0 orange section-subtitle">
-                CC Exhibition
+                Lecture
               </h5>
               <p class="custom_p_tag col-sm-5 col-12 col-md-12 pb-4 pr-0 pl-0 text-white">
-                Connecting with gaming creators: Four things developers should know — with live Q&A
+                Connecting with gaming creators
               </p>
-            </div>
+            </article>
           </li>
           <li class="col-12 col-md-2 pr-4 pl-0 mr-1">
-            <div class="program-block text-center row mb-5 p-4 bg-dark-light-custom">
+            <article class="program-block text-center row mb-5 p-4 bg-dark-light-custom">
               <div class="col-sm-2 col-12 col-md-12 pr-0 pl-0">
-                <img src="assets/images/forum.png" alt="forum"/>
+               <img src="assets/images/forum.png" alt="lecture"/>
               </div>
               <h5 class="col-sm-5 col-12 col-md-12 pr-0 pl-0 orange section-subtitle">
-                Forum
+                Lecture
               </h5>
               <p class="custom_p_tag col-sm-5 col-12 col-md-12 pb-4 pr-0 pl-0 text-white">
-                Cloud Native Databases and Storage for Games and optimization techniques on framerates — with live Q&A
+                Connecting with gaming creators
               </p>
-            </div>
+            </article>
           </li>
           <li class="col-12 col-md-2 pr-4 pl-0 mr-1">
-            <div class="program-block text-center row mb-5 p-4 bg-dark-light-custom">
+            <article class="program-block text-center row mb-5 p-4 bg-dark-light-custom">
               <div class="col-sm-2 col-12 col-md-12 pr-0 pl-0">
-                <img src="assets/images/workshop.png" alt="workshop"/>
+               <img src="assets/images/ignite.png" alt="lecture"/>
               </div>
               <h5 class="col-sm-5 col-12 col-md-12 pr-0 pl-0 orange section-subtitle">
-                Workshop
+                Lecture
               </h5>
-              <p class="custom_p_tag col-sm-5 col-12 col-md-12 pr-0 pb-3 pl-0 text-white">
-                Less time porting and certing, more time creating fast and reliable environmental setup — with live Q&A
+              <p class="custom_p_tag col-sm-5 col-12 col-md-12 pb-4 pr-0 pl-0 text-white">
+                Connecting with gaming creators
               </p>
-            </div>
+            </article>
+          </li>
+          <li class="col-12 col-md-2 pr-4 pl-0 mr-1">
+            <article class="program-block text-center row mb-5 p-4 bg-dark-light-custom">
+              <div class="col-sm-2 col-12 col-md-12 pr-0 pl-0">
+               <img src="assets/images/workshop.png" alt="lecture"/>
+              </div>
+              <h5 class="col-sm-5 col-12 col-md-12 pr-0 pl-0 orange section-subtitle">
+                Lecture
+              </h5>
+              <p class="custom_p_tag col-sm-5 col-12 col-md-12 pb-4 pr-0 pl-0 text-white">
+                Connecting with gaming creators
+              </p>
+            </article>
           </li>
         </ul>
         <div class="row mb-5">
